force-app/main/default/objects/ssot__PaymentRequest__dlm/fields/ssot__ClaimId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimId__c</fullName>
    <label>Claim</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClaimId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>