force-app/main/default/objects/ssot__PaymentRequest__dlm/fields/ssot__PaymentRequest_ClaimId_map_Claim_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentRequest_ClaimId_map_Claim_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PaymentRequest_ClaimId_map_Claim_Id_N_1</label>
    <referenceTo>ssot__Claim__dlm</referenceTo>
    <relationshipLabel>PaymentRequest_ClaimId_map_Claim_Id_N_1</relationshipLabel>
    <relationshipName>PaymentRequest_ClaimId_map_Claim_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>