force-app/main/default/objects/ssot__PaymentRequest__dlm/fields/ssot__PaymentRequestReceivedMethod__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentRequestReceivedMethod__c</fullName>
    <label>Payment Request Received Method</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentRequestReceivedMethod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>