force-app/main/default/objects/ssot__PaymentRequest__dlm/fields/ssot__PaymentRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentRequestStatus__c</fullName>
    <label>Payment Request Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentRequestStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>