force-app/main/default/objects/ssot__PaymentRequest__dlm/fields/ssot__ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReceivedDate__c</fullName>
    <label>Received Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReceivedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>