force-app/main/default/objects/ssot__PaymentRequest__dlm/fields/ssot__rel_1731658750825_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658750825_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PaymentRequest_RemittanceRecipientId_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>PaymentRequest_RemittanceRecipientId_rel</relationshipLabel>
    <relationshipName>rel_1731658750825_end</relationshipName>
    <type>Lookup</type>
</CustomField>