force-app/main/default/objects/ssot__PaymentRequest__dlm/fields/ssot__RemittanceRecipientId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RemittanceRecipientId__c</fullName>
    <label>Remittance Recipient</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RemittanceRecipientId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>