force-app/main/default/objects/ssot__PaymentRequest__dlm/fields/ssot__RemittanceRecipientObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__RemittanceRecipientObject__c</fullName>
    <label>Remittance Recipient Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RemittanceRecipientObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>