force-app/main/default/objects/ssot__PaymentRequest__dlm/fields/ssot__ServiceRecipientObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceRecipientObject__c</fullName>
    <label>Service Recipient Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceRecipientObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>