force-app/main/default/objects/ssot__PaymentRequest__dlm/fields/ssot__SubmittingAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubmittingAccountId__c</fullName>
    <label>Submitting Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubmittingAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>