force-app/main/default/objects/ssot__PaymentRequest__dlm/fields/ssot__TotalRequestedAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalRequestedAmount__c</fullName>
    <label>Total Requested Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalRequestedAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>